# dotrun

./: .gitignore  CHANGES.txt  Dockerfile  README.md  README.rst  build.sh  dotrun  dotrun.py  dotrun_source.tar.bz2  lib.c  pyproject.toml  setup.py
.github/workflows/: pr.yaml  publish.yaml  test-snap.yaml  test-snap.yml  tests.yml  yarn.yml
canonicalwebteam/dotrun/: __init__.py  commands.py  file_helpers.py  models.py
dotrun/: __init__.py
scripts/: cloud-init-dotrun.yaml  install-dotrun-docker.sh  install-with-multipass.sh  install.sh  local-qa.sh  test-snap-in-multipass  test-snap-using-multipass
snap/: snapcraft.yaml
src/: setup.py
src/canonicalwebteam/dotrun/: __init__.py  models.py
tests/: test_empty_project.py  test_python_project.py  test_yarn_project.py
tests/fixtures/empty-project/: README.md
tests/fixtures/python-project/: .env  another.py  package.json  requirements.blueprint.txt  wsgi.py
tests/fixtures/yarn-project/: .env  package.blueprint.json  package.json
