[tool.poetry]
name = 'dotrun'
version = '2.3.0'
description = 'A tool for developing Node.js and Python projects'
authors = ['Canonical Web Team <webteam@canonical.com>']
license = 'LGPL-3.0'
readme = 'README.md'

[tool.poetry.scripts]
dotrun = "dotrun:cli"

[tool.poetry.dependencies]
python = '^3.10'
python-dotenv = '1.0.1'
python-slugify = '8.0.4'
docker = '7.1.0'
dockerpty = '0.4.1'


[build-system]
requires = ['poetry>=0.12']
build-backend = 'poetry.masonry.api'
